GS-7702 Fixed IE6 first-to-rate alignment issue

--- a/src/webapp/res/css/widget/schoolSearchWidget.css
+++ b/src/webapp/res/css/widget/schoolSearchWidget.css
@@ -193,7 +193,7 @@ div#mapTabBody {
             position: absolute;
             right: -5px;
             margin-top: 10px;
-            width: 140px;
+            width: 130px;
         }
 
             div.schoolInfoWindow div.schoolInfo div.typeGrade {
